Added to history stable arg
