# apps/api/config/swagger.yaml
@@ -102,6 +102,12 @@ paths:
             type: string
             pattern: ^([\d]{4}-[\d]{2}-[\d]{2}T[\d]{2}:[\d]{2}:[\d]{2}.[\d]{1,6})$
             example: "2024-01-15T05:30:55.0"
+        - name: stable
+          in: query
+          required: false
+          description: If false, non alerts statuses will be ignored
+          schema:
+            type: boolean
         - name: limit
           in: query
           required: false
@@ -152,6 +158,12 @@ paths:
             type: string
             pattern: ^([\d]{4}-[\d]{2}-[\d]{2}T[\d]{2}:[\d]{2}:[\d]{2}.[\d]{1,6})$
             example: "2024-01-15T05:30:55.0"
+        - name: stable
+          in: query
+          required: false
+          description: If false, non alerts statuses will be ignored
+          schema:
+            type: boolean
         - name: limit
           in: query
           required: false
